# solana-falcon-auth

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
programs/example-consumer/: Cargo.toml
programs/example-consumer/src/: lib.rs
programs/falcon-auth/: Cargo.toml
programs/falcon-auth/src/: lib.rs
programs/falcon-auth/tests/: consumer_cpi.rs  register_key.rs  rotate_close.rs  vault_cpi.rs  verify_action.rs
programs/falcon-vault/: Cargo.toml
programs/falcon-vault/src/: lib.rs
programs/pq-migration-registry/: Cargo.toml
programs/pq-migration-registry/src/: lib.rs
programs/pq-migration-registry/tests/: registry.rs
programs/pq-quorum-auth/: Cargo.toml
programs/pq-quorum-auth/src/: lib.rs  mldsa44.rs
programs/pq-quorum-auth/tests/: quorum.rs
programs/pq-smart-account/: Cargo.toml
programs/pq-smart-account/src/: lib.rs
programs/pq-smart-account/tests/: smart_account.rs
