[package]
name = "falcon-auth"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[features]
no-entrypoint = []
custom-heap = []
custom-panic = []

[dependencies]
solana-falcon512.workspace = true
solana-program.workspace = true
solana-system-interface.workspace = true

[dev-dependencies]
mollusk-svm = "0.12.0"
pqcrypto-falcon = "0.4"
pqcrypto-traits = "0.3"
solana-account = "3.4.0"
solana-compute-budget-interface = "3.0.0"
solana-instruction = "3.4.0"
solana-keypair = "3.0.1"
solana-program-error.workspace = true
solana-commitment-config = "3.1.1"
solana-pubkey = "4.2.0"
solana-pubkey-v3 = { package = "solana-pubkey", version = "=3.0.0" }
solana-rpc-client = "3.1.10"
solana-sdk-ids = "3.1.0"
solana-signer = "3.0.0"
solana-transaction = { version = "=3.0.2", features = ["bincode"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
