[package]
name = "falcon-vault"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[features]
no-entrypoint = []
custom-heap = []
custom-panic = []

[dependencies]
solana-program.workspace = true
solana-system-interface.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
