[package]
name = "pq-smart-account"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[features]
no-entrypoint = []
custom-heap = []
custom-panic = []

[dependencies]
solana-program.workspace = true
solana-system-interface.workspace = true

[dev-dependencies]
fips204_rs = "1.0.1"
mollusk-svm = "0.12.0"
pqcrypto-falcon = "0.4"
pqcrypto-traits = "0.3"
solana-account = "3.4.0"
solana-falcon512.workspace = true
solana-instruction = "3.4.0"
solana-nostd-keccak.workspace = true
solana-program-error.workspace = true
solana-program-option = "3.1.0"
solana-program-pack = "3.1.0"
solana-pubkey = "4.2.0"
solana-sdk-ids = "3.1.0"
mollusk-svm-programs-token = { version = "0.12.0", default-features = false, features = ["token"] }
spl-token-interface = "2.0.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
